monitoring/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: main
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 3000}]'
    alb.ingress.kubernetes.io/group.name: order-system
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # grafana dashboard
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-stack-grafana
                port:
                  number: 80
